5cc9c2f4e0becab92b6f851032e11261c3f58848/css/qians-first-project-5bbb7a.webflow.css
/* ... */
.homepage-subtitle {
  position: static;
  padding-top: 60px;
  color: #969696;
  font-size: 16px;
}

.footer-copyright {
  position: static;
  left: 10%;
  top: auto;
  right: auto;
  bottom: 0%;
  display: inline-block;
  width: 50%;
  color: #969696;
  font-size: 14px;
  text-align: left;
}

.footer-wrapper{
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
  margin: 0px;
}

.footer-wrapper img {
  width: 130px;
}

.footer-wrapper p {
  color: #969696;
  font-size: 14px;
  margin: 20px;
}

.hp-title {
  padding-top: 10px;
  line-height: 1em;
  font-size: var(--font-title);
}

.columns {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  margin-top: 20px;
  margin-bottom: 0px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
  opacity: 1;
}

.body-paragraph {
  margin-top: 20px;
  margin-bottom: 30px;
  color: #333;
  font-size: 16px;
  line-height: 2em;
}

.column {
  margin-top: 40px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  -ms-grid-row-align: stretch;
  align-self: stretch;
  -webkit-box-flex: 0;
  -webkit-flex: 0 auto;
  -ms-flex: 0 auto;
  flex: 0 auto;
}

.column-2 {
  margin-top: 40px;
  border: 1px none #000;
}

.column-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 40px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  border: 1px none #000;
}

.hp-process-card {
  position: static;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  padding: 10% 10px 10% 10%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 3px none #000;
  border-radius: 0px;
  background-color: #fff;
  box-shadow: 1px 1px 8px 0 #d9d9d9;
}

.image-2 {
  width: auto;
  height: auto;
  margin-bottom: 0px;
}

.card-title {
  color: #ee4266;
  font-size: 28px;
  line-height: 1em;
}

.card-title.blue-text {
  color: #2047ad;
}

.card-title.purple-text {
  color: #9a80d3;
}

.image-3 {
  width: 50px;
  height: 50px;
  margin-bottom: 20px;
}

.image-3.bulb {
  width: 40px;
}

.text-block-2 {
  color: hsla(233.85826771653547, 56.95%, 43.73%, 1.00);
  font-size: 24px;
  line-height: 24px;
}

.text-block-3 {
  color: #9a80d3;
  font-size: 24px;
  line-height: 24px;
}

.footnote {
  position: static;
  display: block;
  padding: 40px 5%;
  grid-auto-columns: 1fr;
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  -ms-grid-columns: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  -ms-grid-rows: auto auto;
  grid-template-rows: auto auto;
  box-shadow: 0 -1px 5px 0 rgba(0, 0, 0, .05);
}

.about-banner {
  width: 50%;
  height: auto;
  margin-top: 60px;
  margin-bottom: 150px;
  padding-top: 150px;
}

.section-title {
  position: static;
  width: 100%;
  /*margin-left: 220px;*/
  color: #000;
  font-size: 40px;
  line-height: 1em;
  font-weight: 700;
  /*text-transform: uppercase;*/
}

.section-title-bar {
  border-bottom: 3px solid black;
  padding-bottom: 5px;
  width: 15%;
}

.section-title.page-center {
  line-height: 0em;
  text-align: center;
}

.shadow-title {
  position: relative;
  left: 0.5em;
  top: -0.5em;
  bottom: auto;
  width: auto;
  opacity: 1;
  color: hsla(36.470588235294116, 100.00%, 50.00%, 0.20);
  font-size: 60px;
  line-height: 1em;
  font-weight: 700;
}

.normal-text {
  display: block;
  width: auto;
  max-width: none;
  min-width: auto;
  padding-top: 20px;
  padding-bottom: 20px;
  color: #000;
  font-size: 16px;
  line-height: 200%;
}

.normal-text.page-banner-text {
  max-width: 55%;
  padding-top: 40px;
}

.normal-text.halfway-paragraph {
  width: 800px;
  max-width: 100%;
  margin-bottom: 30px;
  text-align: left;
}

.normal-text.test {
  float: none;
  clear: none;
}

.normal-text.small-paragraph {
  font-size: 12px;
}

.normal-text.right-text {
  float: none;
}

.normal-text.homepate-text {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.img-banner {
  position: absolute;
  left: auto;
  top: 0%;
  right: 0%;
  bottom: auto;
  width: 800px;
  max-height: 600px;
  max-width: 55%;
}

.img-banner.about-banner-pic {
  top: 0px;
  /*right: -50px;*/
  max-height: 550px;
  object-fit: none;
}

.button {
  position: relative;
  top: -14px;
  display: inline-block;
  overflow: visible;
  width: 260px;
  height: 55px;
  margin-bottom: 0px;
  clear: none;
  border-radius: 100px;
  background-color: hsla(208.00000000000003, 0.00%, 100.00%, 1.00);
  opacity: 0;
  color: hsla(347.44186046511624, 83.50%, 59.61%, 1.00);
  font-size: 20px;
  line-height: 35px;
  font-weight: 700;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

.image-5 {
  max-width: 20%;
  float: right;
}
/* ... */

